Update schema and do minor changes
